Used <a> instead of onclick= to redirect from shop.html to product.html

--- a/shop.html
+++ b/shop.html
@@ -32,14 +32,17 @@
 
     <section id="product1" class="deafult-marg1">
       <div class="pro-container">
-        <div class="pro" onclick="window.location.href='product.html';">
-          <img src="./img/products/gog12.webp" alt="" />
-          <div class="prod-desc">
-            <span>Sierras</span>
-            <h5>Glare Colorful Goggles</h5>
-            <h4>$61</h4>
-            <h5 class="cart">+</h5>
-          </div>
+        <!-- Create product page for this product only therefore enclosed in Anchor tag -->
+        <div class="pro">
+          <a href="product.html">
+            <img src="./img/products/gog12.webp" alt="" />
+            <div class="prod-desc">
+              <span>Sierras</span>
+              <h5>Glare Colorful Goggles</h5>
+              <h4>$61</h4>
+              <h5 class="cart">+</h5>
+            </div>
+          </a>
         </div>
         <div class="pro">
           <img src="./img/products/gog9.webp" alt="" />
