about.html introduced, spelling corrected from deafult to default, responsiveness is to be imrpoved further

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <button>Shop Now</button>
     </section>
 
-    <section id="feature" class="deafult-marg1">
+    <section id="feature" class="default-marg1">
       <div class="feature-box">
         <img src="./img/features/f1.png" alt="" />
         <h6>Free Shipping</h6>
@@ -65,7 +65,7 @@
       </div>
     </section>
 
-    <section id="product1" class="deafult-marg1">
+    <section id="product1" class="default-marg1">
       <h2>Featured Products</h2>
       <p>New Modern Collection</p>
       <div class="pro-container">
@@ -144,13 +144,13 @@
       </div>
     </section>
 
-    <section id="banner" class="deafult-marg2">
+    <section id="banner" class="default-marg2">
       <h4>Special Offer</h4>
       <h2>Up to <span>60% off</span> - Spectacles & Accessories</h2>
       <button class="normal">Explore More</button>
     </section>
 
-    <section id="product1" class="deafult-marg1">
+    <section id="product1" class="default-marg1">
       <h2>New Arrivals</h2>
       <p>Latest new in fashion collection</p>
       <div class="pro-container">
@@ -229,7 +229,7 @@
       </div>
     </section>
 
-    <section id="sub-banner" class="deafult-marg1">
+    <section id="sub-banner" class="default-marg1">
       <div class="banner-box banner-box-1">
         <h4>Crazy Deals</h4>
         <h2>buy 1 get 1 free</h2>
@@ -259,7 +259,7 @@
       </div>
     </section>
 
-    <section id="news-letter" class="deafult-marg1 deafult-marg2">
+    <section id="news-letter" class="default-marg1 default-marg2">
       <div class="news">
         <h4>Sign Up for Newsletters</h4>
         <p>Get email for latest crazy & <span>special offers.</span></p>
@@ -270,7 +270,7 @@
       </div>
     </section>
 
-    <footer class="deafult-marg1">
+    <footer class="default-marg1">
       <div class="column">
         <img class="logo" src="img/R2R.png" alt="logo" />
         <h4>Contact</h4>
