--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
       </div>
     </section>
 
-    <section id="product-details" class="deafult-marg1">
+    <section id="product-details" class="default-marg1">
         <div class="product-image">
             <img src="img/products/gog12.webp" width="100%" class="main-image" alt="">
             <div class="small-images">
@@ -59,7 +59,7 @@
         </div>
     </section>
 
-    <section id="product1" class="deafult-marg1">
+    <section id="product1" class="default-marg1">
         <h2>Similar Prodcuts</h2>
         <p>Latest new in fashion collection</p>
         <div class="pro-container">
@@ -102,7 +102,7 @@
         </div>
       </section>
 
-    <section id="news-letter" class="deafult-marg1 deafult-marg2">
+    <section id="news-letter" class="default-marg1 default-marg2">
       <div class="news">
         <h4>Sign Up for Newsletters</h4>
         <p>Get email for latest crazy & <span>special offers.</span></p>
@@ -113,7 +113,7 @@
       </div>
     </section>
 
-    <footer class="deafult-marg1">
+    <footer class="default-marg1">
       <div class="column">
         <img class="logo" src="img/R2R.png" alt="logo" />
         <h4>Contact</h4>
