--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,7 @@
       </div>
     </section>
 
-    <section id="product1" class="deafult-marg1">
+    <section id="product1" class="default-marg1">
       <div class="pro-container">
         <!-- Create product page for this product only therefore enclosed in Anchor tag -->
         <div class="pro">
@@ -184,13 +184,13 @@
       </div>
     </section>
 
-    <section id="shop-pagination" class="deafult-marg1">
+    <section id="shop-pagination" class="default-marg1">
         <a href="#">1</a>
         <a href="#">2</a>
         <a href="#"><i class="fal fa-long-arrow-alt-right"></i></a>
     </section>
 
-    <section id="news-letter" class="deafult-marg1 deafult-marg2">
+    <section id="news-letter" class="default-marg1 default-marg2">
       <div class="news">
         <h4>Sign Up for Newsletters</h4>
         <p>Get email for latest crazy & <span>special offers.</span></p>
@@ -201,7 +201,7 @@
       </div>
     </section>
 
-    <footer class="deafult-marg1">
+    <footer class="default-marg1">
       <div class="column">
         <img class="logo" src="img/R2R.png" alt="logo" />
         <h4>Contact</h4>
